# Fast-Hashing-in-CUDA

./: .gitignore  .gitmodules  README.md  TODO.md
proposal/: bibl.bib  proposal.tex
report/: bibl_conf.bib  report.dvi  report.out  report.tex
src/: .gitignore  CMakeLists.txt  K.h  ROTR.cuh  SHR.cuh  Sigma0.cuh  Sigma1.cuh  choose.cuh  delta.h  lambda.h  main.cu  main_loop_cpu.h  main_loop_gpu.h  majority.cuh  mk_sigma_test.cuh  padding.h  parsha256_kernel.cuh  parsha256_kernel_lastRound.cuh  parsha256_kernel_middleRounds.cuh  parsha256_on_gpu.h  parsha256_padding.h  parsha256_sha256.h  run_tests.h  sha256_On_Cpu.h  sha256_On_Gpu.h  sha256_kernel_cpu.h  sha256_kernel_gpu.h  sha256_on_cpu.h  sha256_on_gpu.h  sha256_padding.h  sigma.cuh  sigma0.cuh  sigma1.cuh
